--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f29a0f; }
+  background: #ca81b2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #539fc8; }
+  background: #f8c2a1; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #59a31f; }
+  background: #e4f14d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #058bff; }
+  background: #ffc13c; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d64061; }
+  background: #3d1fe3; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f6eb3e; }
+  background: #750d40; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c22bb9; }
+  background: #242c9f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #caef8e; }
+  background: #c792cc; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #fd86f2; }
+  background: #a6df06; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #52ab21; }
+  background: #8e20c0; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9e84a2; }
+  background: #b2aa87; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #4f3f10; }
+  background: #572063; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7d4a96; }
+  background: #c0b35e; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ad5c20; }
+  background: #38b432; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a73a30; }
+  background: #808dc6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8d0e13; }
+  background: #a8e667; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #690d88; }
+  background: #250734; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #5aa1e7; }
+  background: #4f5a98; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a9c72d; }
+  background: #4e2f36; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e8829b; }
+  background: #8a7faa; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #60aa6d; }
+  background: #18b334; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #618fe0; }
+  background: #41a15a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a5207d; }
+  background: #1776ef; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #107d86; }
+  background: #19c908; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #9a3d2e; }
+  background: #1a58c0; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3a8a93; }
+  background: #525b61; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #96fdd6; }
+  background: #e01f0e; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #01e1b6; }
+  background: #2104da; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #721641; }
+  background: #2d65cf; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4a6678; }
+  background: #0fa0e1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #04a9c0; }
+  background: #eb993c; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #34812d; }
+  background: #203761; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #bbee2a; }
+  background: #3f3177; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5060a4; }
+  background: #8e56d7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #58a445; }
+  background: #66978b; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #9f64bc; }
+  background: #fac1d6; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e87d2d; }
+  background: #d4fcf5; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #faad8b; }
+  background: #b55bba; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #dd7dcf; }
+  background: #124f0a; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1da56e; }
+  background: #67239b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8f5713; }
+  background: #2b2df2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #a0753a; }
+  background: #fda657; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #035980; }
+  background: #a60621; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #066a3b; }
+  background: #c3b2e6; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1459c1; }
+  background: #e13d08; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9fa655; }
+  background: #acd8f1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ca0c30; }
+  background: #b57e0a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d345e7; }
+  background: #44f9ee; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #365ea3; }
+  background: #07db1c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #669cc4; }
+  background: #2da6ba; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #824e77; }
+  background: #56ae53; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #eff91f; }
+  background: #48c839; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #78a6c0; }
+  background: #b3e87d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #4ee993; }
+  background: #3db223; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #ec804d; }
+  background: #d5ed18; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a62c41; }
+  background: #80e6ff; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #68f26e; }
+  background: #8c0ec9; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #06ca64; }
+  background: #cece68; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d68e2b; }
+  background: #ffbe0f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #99ebec; }
+  background: #3a5ace; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #cb03a2; }
+  background: #30625c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #df73a6; }
+  background: #c8ae2a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #53feb0; }
+  background: #205491; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #370f53; }
+  background: #26bb9c; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b25cde; }
+  background: #35f088; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ac3707; }
+  background: #56cdca; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #bbc128; }
+  background: #5285fc; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #48a4d2; }
+  background: #82ccb3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #40ab6e; }
+  background: #2384db; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f4e6ee; }
+  background: #3d1210; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #de233d; }
+  background: #05c211; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c44590; }
+  background: #cf68e5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #59d1f9; }
+  background: #a83203; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f40176; }
+  background: #d6d997; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e10466; }
+  background: #0f779f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #9c8bb5; }
+  background: #30107f; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #e3d4c6; }
+  background: #26be1b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #cc9561; }
+  background: #ef292f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #39cdfa; }
+  background: #9f51f5; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c465cc; }
+  background: #a6dfec; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a9ed09; }
+  background: #18ffa7; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #07c6fb; }
+  background: #fed004; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3d6a6a; }
+  background: #9e5a16; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #f22d25; }
+  background: #32116d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #94ef87; }
+  background: #3ec838; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #82fda1; }
+  background: #c95b5d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #30781f; }
+  background: #f8897c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ca0eaa; }
+  background: #0fbbc6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #bfb922; }
+  background: #27e30d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #240b4c; }
+  background: #238e08; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #555459; }
+  background: #252342; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #933a62; }
+  background: #f21078; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #54de62; }
+  background: #ee391b; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #7827f4; }
+  background: #6a80f8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d41165; }
+  background: #2a8c44; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e73cdf; }
+  background: #d19e1b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #552149; }
+  background: #20710e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #921401; }
+  background: #8063ee; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f2afee; }
+  background: #7a0e9e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e6dc2f; }
+  background: #26f731; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11338,8 +11338,8 @@ input[type="submit"] {
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 31px;
+  width: 44px;
+  height: 23px;
   margin-top: 8px; }
 
 .switch input {
@@ -11361,10 +11361,10 @@ input[type="submit"] {
 .sliders:before {
   position: absolute;
   content: "";
-  height: 23px;
-  width: 24px;
-  left: 4px;
-  bottom: 4px;
+  height: 12px;
+  width: 12px;
+  left: 3px;
+  bottom: 5px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s; }
@@ -11464,11 +11464,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -12163,7 +12167,7 @@ input:checked + .sliders-Not .not-blue-bg {
 
 /* The container */
 .check-container {
-  color: #9A9A9A;
+  color: #9a9a9a;
   display: block;
   position: relative;
   padding-left: 30px;
