toggle button css

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ca81b2; }
+  background: #ebf416; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f8c2a1; }
+  background: #5b9d3b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e4f14d; }
+  background: #69b6f4; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ffc13c; }
+  background: #84c1dd; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #3d1fe3; }
+  background: #108d1b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #750d40; }
+  background: #de872f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #242c9f; }
+  background: #1aa0b2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c792cc; }
+  background: #071fe2; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a6df06; }
+  background: #43d539; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8e20c0; }
+  background: #182e64; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b2aa87; }
+  background: #970589; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #572063; }
+  background: #7f5fb1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c0b35e; }
+  background: #2d3811; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #38b432; }
+  background: #0d9783; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #808dc6; }
+  background: #39e7ef; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #a8e667; }
+  background: #0d9d42; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #250734; }
+  background: #a7fa93; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #4f5a98; }
+  background: #346bef; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #4e2f36; }
+  background: #dd3603; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #8a7faa; }
+  background: #497fea; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #18b334; }
+  background: #544cfd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #41a15a; }
+  background: #20ea87; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1776ef; }
+  background: #02cdc0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #19c908; }
+  background: #1b76ce; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1a58c0; }
+  background: #0e7ffd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #525b61; }
+  background: #698b3b; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e01f0e; }
+  background: #1ad9a4; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2104da; }
+  background: #4d2bd2; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2d65cf; }
+  background: #c82215; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0fa0e1; }
+  background: #27f043; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #eb993c; }
+  background: #11538a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #203761; }
+  background: #c06fe4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3f3177; }
+  background: #06806e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8e56d7; }
+  background: #89e0ae; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #66978b; }
+  background: #0b2946; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fac1d6; }
+  background: #40036d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d4fcf5; }
+  background: #da59e6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b55bba; }
+  background: #4e1dca; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #124f0a; }
+  background: #d9cafd; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #67239b; }
+  background: #2fc685; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2b2df2; }
+  background: #9e0ba2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #fda657; }
+  background: #d32e7e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a60621; }
+  background: #3434ce; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c3b2e6; }
+  background: #d094d2; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e13d08; }
+  background: #b8cacf; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #acd8f1; }
+  background: #dbf3d8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b57e0a; }
+  background: #8dbec4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #44f9ee; }
+  background: #a0a433; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #07db1c; }
+  background: #792d21; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2da6ba; }
+  background: #05cc8e; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #56ae53; }
+  background: #4c90dd; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #48c839; }
+  background: #6a9e15; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #b3e87d; }
+  background: #6cb3b2; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3db223; }
+  background: #1a6331; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d5ed18; }
+  background: #7ecc4f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #80e6ff; }
+  background: #b2bb9a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #8c0ec9; }
+  background: #8e3ae2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cece68; }
+  background: #3b9b93; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ffbe0f; }
+  background: #f45b4d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #3a5ace; }
+  background: #909747; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #30625c; }
+  background: #a6865b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c8ae2a; }
+  background: #77bbd3; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #205491; }
+  background: #b3883d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #26bb9c; }
+  background: #4ac6d4; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #35f088; }
+  background: #bd755a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #56cdca; }
+  background: #26be2b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5285fc; }
+  background: #b77c2a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #82ccb3; }
+  background: #0c772d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2384db; }
+  background: #67151a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #3d1210; }
+  background: #ab4ded; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #05c211; }
+  background: #b8f07a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #cf68e5; }
+  background: #b92f60; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a83203; }
+  background: #355ddd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d6d997; }
+  background: #d06872; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #0f779f; }
+  background: #094ed1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #30107f; }
+  background: #2bbf4e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #26be1b; }
+  background: #31c7a8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ef292f; }
+  background: #184667; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #9f51f5; }
+  background: #f089ab; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #a6dfec; }
+  background: #0eb0b1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #18ffa7; }
+  background: #38d3d6; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #fed004; }
+  background: #cdf8c1; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #9e5a16; }
+  background: #77730f; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #32116d; }
+  background: #0c4410; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3ec838; }
+  background: #03d2ad; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c95b5d; }
+  background: #5b04c4; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f8897c; }
+  background: #fd4734; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0fbbc6; }
+  background: #165df4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #27e30d; }
+  background: #f1bec4; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #238e08; }
+  background: #88c8ad; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #252342; }
+  background: #4dd6aa; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f21078; }
+  background: #ae104d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ee391b; }
+  background: #2f8131; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #6a80f8; }
+  background: #766b7f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #2a8c44; }
+  background: #74c07e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d19e1b; }
+  background: #bb9f13; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #20710e; }
+  background: #ed1aba; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8063ee; }
+  background: #f08e8c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #7a0e9e; }
+  background: #755739; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #26f731; }
+  background: #36c822; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11338,8 +11338,8 @@ input[type="submit"] {
 .switch {
   position: relative;
   display: inline-block;
-  width: 44px;
-  height: 23px;
+  width: 39px;
+  height: 21px;
   margin-top: 8px; }
 
 .switch input {
@@ -11376,9 +11376,9 @@ input:focus + .sliders {
   box-shadow: 0 0 1px #776fff; }
 
 input:checked + .sliders:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px); }
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px); }
 
 /* Rounded sliders */
 .sliders.round {
