connectors new page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ebf416; }
+  background: #cc97e7; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5b9d3b; }
+  background: #bc2fdd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #69b6f4; }
+  background: #f9b7fc; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #84c1dd; }
+  background: #889a9d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #108d1b; }
+  background: #7fb38d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #de872f; }
+  background: #7dd55e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1aa0b2; }
+  background: #2b3ba1; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #071fe2; }
+  background: #c51795; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #43d539; }
+  background: #cc018b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #182e64; }
+  background: #e20710; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #970589; }
+  background: #8b673e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #7f5fb1; }
+  background: #14ddd8; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #2d3811; }
+  background: #faba33; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0d9783; }
+  background: #59dcb3; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #39e7ef; }
+  background: #08118e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0d9d42; }
+  background: #c3dca2; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a7fa93; }
+  background: #2dc8fa; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #346bef; }
+  background: #5df664; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #dd3603; }
+  background: #38553c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #497fea; }
+  background: #ef4727; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #544cfd; }
+  background: #d01e2b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #20ea87; }
+  background: #2206f1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #02cdc0; }
+  background: #dbd705; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #1b76ce; }
+  background: #480dc2; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0e7ffd; }
+  background: #315eea; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #698b3b; }
+  background: #3b15e4; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #1ad9a4; }
+  background: #7351f5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4d2bd2; }
+  background: #4bc245; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c82215; }
+  background: #9132c8; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #27f043; }
+  background: #241ac2; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #11538a; }
+  background: #761b69; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c06fe4; }
+  background: #ac03c3; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #06806e; }
+  background: #c6d089; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #89e0ae; }
+  background: #aaa268; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #0b2946; }
+  background: #9685cb; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #40036d; }
+  background: #bceb38; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #da59e6; }
+  background: #7ece66; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #4e1dca; }
+  background: #e3556d; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d9cafd; }
+  background: #c4c702; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2fc685; }
+  background: #dca28e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9e0ba2; }
+  background: #10a3c2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d32e7e; }
+  background: #2ec802; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #3434ce; }
+  background: #f98eee; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d094d2; }
+  background: #a295d7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b8cacf; }
+  background: #1b0e31; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #dbf3d8; }
+  background: #b624f7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #8dbec4; }
+  background: #2d0488; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a0a433; }
+  background: #f05c3d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #792d21; }
+  background: #455976; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #05cc8e; }
+  background: #34d677; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #4c90dd; }
+  background: #8c9b58; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6a9e15; }
+  background: #647677; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6cb3b2; }
+  background: #6d540f; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #1a6331; }
+  background: #3626cc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #7ecc4f; }
+  background: #5514d2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b2bb9a; }
+  background: #13836a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #8e3ae2; }
+  background: #9d3f9e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3b9b93; }
+  background: #8ba568; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f45b4d; }
+  background: #3a287a; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #909747; }
+  background: #5aa9fd; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a6865b; }
+  background: #e76846; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #77bbd3; }
+  background: #0ca999; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #b3883d; }
+  background: #ba5f65; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #4ac6d4; }
+  background: #a5bd4a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #bd755a; }
+  background: #2592a8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #26be2b; }
+  background: #e282fe; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b77c2a; }
+  background: #5b20aa; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0c772d; }
+  background: #420c46; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #67151a; }
+  background: #ae209a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ab4ded; }
+  background: #63f179; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b8f07a; }
+  background: #d8ac47; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b92f60; }
+  background: #ceaf84; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #355ddd; }
+  background: #d8651c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d06872; }
+  background: #936183; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #094ed1; }
+  background: #48338f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #2bbf4e; }
+  background: #856aa5; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #31c7a8; }
+  background: #64de73; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #184667; }
+  background: #6d3261; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f089ab; }
+  background: #b03dee; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0eb0b1; }
+  background: #3e51d8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #38d3d6; }
+  background: #977444; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #cdf8c1; }
+  background: #8e8862; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #77730f; }
+  background: #aa9b8c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #0c4410; }
+  background: #77caa0; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #03d2ad; }
+  background: #767a1d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5b04c4; }
+  background: #c2a46f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #fd4734; }
+  background: #28b786; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #165df4; }
+  background: #82ce9a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f1bec4; }
+  background: #f2466c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #88c8ad; }
+  background: #56b46f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4dd6aa; }
+  background: #b7f747; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ae104d; }
+  background: #1e6a30; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2f8131; }
+  background: #6840c7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #766b7f; }
+  background: #d7f25c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #74c07e; }
+  background: #cde866; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bb9f13; }
+  background: #710a06; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ed1aba; }
+  background: #e8b2ef; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #f08e8c; }
+  background: #25eeb7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #755739; }
+  background: #698379; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #36c822; }
+  background: #d3cf48; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12261,6 +12261,119 @@ td .check-container {
   -ms-transform: translateX(57px);
   transform: translateX(57px); }
 
+.connectors-box-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .connectors-box-wrapper .connec-box-div {
+    background: #fff;
+    padding: 10px;
+    border-radius: 14px;
+    text-align: center;
+    flex-basis: 245px; }
+    .connectors-box-wrapper .connec-box-div .box-logo a {
+      display: inline-block;
+      background: white;
+      width: 30px;
+      height: 30px;
+      margin-right: 5px;
+      margin-bottom: 10px;
+      border: 1px solid #b1b1b1;
+      border-radius: 100%;
+      text-align: center;
+      vertical-align: middle;
+      position: relative; }
+      .connectors-box-wrapper .connec-box-div .box-logo a img {
+        width: 20px;
+        margin: auto;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0px; }
+    .connectors-box-wrapper .connec-box-div .box-title {
+      font-size: 20px;
+      color: #212529;
+      margin-bottom: 30px; }
+    .connectors-box-wrapper .connec-box-div .box-learnmore-btn {
+      margin: 20px 0px; }
+      .connectors-box-wrapper .connec-box-div .box-learnmore-btn a {
+        text-decoration: none; }
+    .connectors-box-wrapper .connec-box-div .box-bottom-bar {
+      position: relative;
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      padding: 5px 10px;
+      border-top: 1px solid #b1b1b1; }
+      .connectors-box-wrapper .connec-box-div .box-bottom-bar div {
+        display: flex;
+        align-items: center;
+        padding-top: 10px; }
+        .connectors-box-wrapper .connec-box-div .box-bottom-bar div span {
+          margin-right: 5px; }
+
+/* The container */
+.container-custom-checkbox {
+  display: block;
+  position: relative;
+  padding-left: 33px;
+  margin-bottom: 19px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 0px solid #cdcdd6; }
+  .container-custom-checkbox .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%;
+    border: 1px solid #776fff; }
+    .container-custom-checkbox .checkmark :after {
+      content: "";
+      position: absolute;
+      display: none; }
+
+/* Hide the browser's default checkbox */
+.container-custom-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0; }
+
+/* Create a custom checkbox */
+/* On mouse-over, add a grey background color */
+.container-custom-checkbox:hover input ~ .checkmark {
+  background-color: #ccc; }
+
+/* When the checkbox is checked, add a blue background */
+.container-custom-checkbox input:checked ~ .checkmark {
+  background-color: #776fff; }
+
+/* Create the checkmark/indicator (hidden when not checked) */
+/* Show the checkmark when checked */
+.container-custom-checkbox input:checked ~ .checkmark:after {
+  display: block; }
+
+/* Style the checkmark/indicator */
+.container-custom-checkbox .checkmark:after {
+  left: 6px;
+  top: 4px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
@@ -12508,7 +12621,13 @@ td .check-container {
     margin-top: 0px !important;
     text-align: left !important; }
   .add-user-modal .adapter-modal-help-box {
-    margin-bottom: 0px !important; } }
+    margin-bottom: 0px !important; }
+
+  .connectors-box-wrapper {
+    flex-wrap: wrap; }
+    .connectors-box-wrapper .connec-box-div {
+      flex-basis: inherit;
+      margin-bottom: 15px; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
