--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -355,6 +355,15 @@
         }
     }
 
+    .connectors-box-wrapper {
+        flex-wrap: wrap;
+
+        .connec-box-div {
+            flex-basis: inherit;
+            margin-bottom: 15px;
+        }
+    }
+
 
 }
 
