--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1833,3 +1833,151 @@ td {
     transform: translateX(57px);
   }
 }
+.connectors-box-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .connec-box-div {
+    background: #fff;
+    padding: 10px;
+    border-radius: 14px;
+    text-align: center;
+    flex-basis: 245px;
+
+    .box-logo {
+      a {
+        display: inline-block;
+        background: white;
+        width: 30px;
+        height: 30px;
+        margin-right: 5px;
+        margin-bottom: 10px;
+        border: 1px solid #b1b1b1;
+        border-radius: 100%;
+        text-align: center;
+        vertical-align: middle;
+        position: relative;
+
+        img {
+          width: 20px;
+          margin: auto;
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0px;
+        }
+      }
+    }
+    .box-title {
+      font-size: 20px;
+      color: #212529;
+      margin-bottom: 30px;
+    }
+    .box-learnmore-btn {
+      margin: 20px 0px;
+      a {
+        text-decoration: none;
+      }
+    }
+    .box-bottom-bar {
+      position: relative;
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      padding: 5px 10px;
+      border-top: 1px solid #b1b1b1;
+      // ::after {
+      //   content: "";
+      //   position: absolute;
+      //   top: 0px;
+      //   left: 0px;
+      //   border: 1px solid #b1b1b1;
+      //   width: 100%;
+      // }
+      div {
+        display: flex;
+        align-items: center;
+        padding-top: 10px;
+
+        span {
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+}
+
+/* The container */
+.container-custom-checkbox {
+  display: block;
+  position: relative;
+  padding-left: 33px;
+  margin-bottom: 19px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 0px solid #cdcdd6;
+
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%;
+    border: 1px solid #776fff;
+
+    :after {
+      content: "";
+      position: absolute;
+      display: none;
+    }
+  }
+}
+
+/* Hide the browser's default checkbox */
+.container-custom-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+
+/* On mouse-over, add a grey background color */
+.container-custom-checkbox:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container-custom-checkbox input:checked ~ .checkmark {
+  background-color: #776fff;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+
+/* Show the checkmark when checked */
+.container-custom-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container-custom-checkbox .checkmark:after {
+  left: 6px;
+  top: 4px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
